unpackaged/main/default/objects/Car_Care_Visit__c/Car_Care_Visit__c.object-meta.xml
<CustomObject>
    <label>Car Care Visit</label>
    <nameField>
        <displayFormat>CCV-{0}</displayFormat>
        <label>Car Care Visit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Care Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>