unpackaged/main/default/objects/Car_Care_Visit__c/fields/ACG_Case__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Car_Care_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>