unpackaged/main/default/objects/Car_Care_Visit__c/fields/Battery_Test_Link__c.field-meta.xml
<CustomField>
    <fullName>Battery_Test_Link__c</fullName>
    <description>Stores URL for Battery Test. This field is populated via nightly by Integration.</description>
    <label>Battery Test Link</label>
    <type>Url</type>
</CustomField>