unpackaged/main/default/objects/Car_Care_Visit__c/fields/Battery_Tester_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Battery_Tester_File_Name__c</fullName>
    <label>Battery Tester File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>