unpackaged/main/default/objects/Car_Care_Visit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Car Care Visits</relationshipLabel>
    <relationshipName>Car_Care_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>