unpackaged/main/default/objects/Car_Care_Visit__c/fields/Current_Milage__c.field-meta.xml
<CustomField>
    <fullName>Current_Milage__c</fullName>
    <label>Current Milage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>