unpackaged/main/default/objects/Car_Care_Visit__c/fields/Declined_Battery__c.field-meta.xml
<CustomField>
    <fullName>Declined_Battery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this repair order had a declined battery (check = True)</description>
    <inlineHelpText>Designates if this repair order had a declined battery (check = True)</inlineHelpText>
    <label>Declined Battery</label>
    <type>Checkbox</type>
</CustomField>