unpackaged/main/default/objects/Car_Care_Visit__c/fields/Declined_Brakes__c.field-meta.xml
<CustomField>
    <fullName>Declined_Brakes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this repair order had a declined brake service (check = True)</description>
    <inlineHelpText>Designates if this repair order had a declined brake service (check = True)</inlineHelpText>
    <label>Declined Brakes</label>
    <type>Checkbox</type>
</CustomField>