unpackaged/main/default/objects/Car_Care_Visit__c/fields/Declined_Filter__c.field-meta.xml
<CustomField>
    <fullName>Declined_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this repair order had a declined filter (check = True)</description>
    <inlineHelpText>Designates if this repair order had a declined filter (check = True)</inlineHelpText>
    <label>Declined Filter</label>
    <type>Checkbox</type>
</CustomField>