unpackaged/main/default/objects/Car_Care_Visit__c/fields/Declined_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Declined_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this repair order had a declined maintenance service (check = True)</description>
    <inlineHelpText>Designates if this repair order had a declined maintenance service (check = True)</inlineHelpText>
    <label>Declined Maintenance</label>
    <type>Checkbox</type>
</CustomField>