unpackaged/main/default/objects/Car_Care_Visit__c/fields/Declined_Tires__c.field-meta.xml
<CustomField>
    <fullName>Declined_Tires__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this repair order had a declined tires (check = True)</description>
    <inlineHelpText>Designates if this repair order had a declined tires (check = True)</inlineHelpText>
    <label>Declined Tires</label>
    <type>Checkbox</type>
</CustomField>