unpackaged/main/default/objects/Car_Care_Visit__c/fields/DVI_File_Name__c.field-meta.xml
<CustomField>
    <fullName>DVI_File_Name__c</fullName>
    <label>DVI File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>