unpackaged/main/default/objects/Car_Care_Visit__c/fields/DVI_Link__c.field-meta.xml
<CustomField>
    <fullName>DVI_Link__c</fullName>
    <description>Stores DVI URL .This field is populated via nightly integration</description>
    <label>DVI Link</label>
    <type>Url</type>
</CustomField>