unpackaged/main/default/objects/Car_Care_Visit__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Customer Email Address . This field is populated from 9/1/2020 and used to match back CC visits with online appointments</description>
    <inlineHelpText>Customer Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>