unpackaged/main/default/objects/Car_Care_Visit__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>