unpackaged/main/default/objects/Car_Care_Visit__c/fields/Fleet_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fleet Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Car Care Visits (Fleet Contact)</relationshipLabel>
    <relationshipName>Car_Care_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>