unpackaged/main/default/objects/Car_Care_Visit__c/fields/IntegrationId__c.field-meta.xml
<CustomField>
    <fullName>IntegrationId__c</fullName>
    <externalId>true</externalId>
    <label>IntegrationId</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>