unpackaged/main/default/objects/Car_Care_Visit__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <formula>IF(
        ISBLANK(Invoice_File__c ), &#39;No Invoice&#39;,
       HYPERLINK(&#39;/apex/OpenCarCareDocs?fileType=invoice&amp;fileName=&#39; + Invoice_File__c ,&#39;Click to open&#39;)
    )</formula>
    <label>Invoice</label>
    <type>Text</type>
</CustomField>