unpackaged/main/default/objects/Car_Care_Visit__c/fields/Invoice_File__c.field-meta.xml
<CustomField>
    <fullName>Invoice_File__c</fullName>
    <description>Displays Invoice File Name if Invoice generated flag is true</description>
    <formula>If ( Invoice_Generated__c = true , &#39;rpt-&#39;+ Store__c +&#39;-&#39;+RO_Number__c +&#39;-invoice-k.pdf&#39;,&#39;&#39;)</formula>
    <label>Invoice File</label>
    <type>Text</type>
</CustomField>