unpackaged/main/default/objects/Car_Care_Visit__c/fields/Invoice_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_File_Name__c</fullName>
    <description>Stores Invoice File Name from RO Writer/Omnique. This field is populated via nightly integration</description>
    <label>Invoice File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>