unpackaged/main/default/objects/Car_Care_Visit__c/fields/Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a invoice is generated and exists</description>
    <label>Invoice Generated</label>
    <type>Checkbox</type>
</CustomField>