unpackaged/main/default/objects/Car_Care_Visit__c/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <description>Digital Invoice from AWS S3</description>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>