unpackaged/main/default/objects/Car_Care_Visit__c/fields/Is_Other_Survey__c.field-meta.xml
<CustomField>
    <fullName>Is_Other_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Car Care Visit (RO) has been selected for another survey.</description>
    <label>Is Other Survey</label>
    <type>Checkbox</type>
</CustomField>