unpackaged/main/default/objects/Car_Care_Visit__c/fields/Is_SF_Survey__c.field-meta.xml
<CustomField>
    <fullName>Is_SF_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified car care visits that have been sent a survey through salesforce.</description>
    <inlineHelpText>Identified car care visits that have been sent a survey through salesforce.</inlineHelpText>
    <label>Is SF Survey</label>
    <type>Checkbox</type>
</CustomField>