unpackaged/main/default/objects/Car_Care_Visit__c/fields/Last_Visited_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visited_Date__c</fullName>
    <label>Last Visited Date</label>
    <type>Date</type>
</CustomField>