unpackaged/main/default/objects/Car_Care_Visit__c/fields/Last_Visited_Location__c.field-meta.xml
<CustomField>
    <fullName>Last_Visited_Location__c</fullName>
    <label>Last Visited Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>