unpackaged/main/default/objects/Car_Care_Visit__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <description>Vehicle License Plate</description>
    <inlineHelpText>Vehicle License Plate</inlineHelpText>
    <label>License Plate #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>