unpackaged/main/default/objects/Car_Care_Visit__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>AAA_Location__c</referenceTo>
    <relationshipLabel>Car Care Visits</relationshipLabel>
    <relationshipName>Car_Care_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>