unpackaged/main/default/objects/Car_Care_Visit__c/fields/Oil_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Oil_Change_Type__c</fullName>
    <description>Designates the type of oil change performed on the vehicle</description>
    <inlineHelpText>Designates the type of oil change performed on the vehicle</inlineHelpText>
    <label>Oil Change Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>