unpackaged/main/default/objects/Car_Care_Visit__c/fields/P_Cost__c.field-meta.xml
<CustomField>
    <fullName>P_Cost__c</fullName>
    <label>P Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>