unpackaged/main/default/objects/Car_Care_Visit__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <formula>IF(
        ISBLANK(Parts_File_Name__c), &#39;No Parts&#39;,
       HYPERLINK(&#39;/apex/OpenCarCareDocs?fileType=Parts&amp;fileName=&#39; + Parts_File_Name__c,&#39;Click to open&#39;)
    )</formula>
    <label>Parts</label>
    <type>Text</type>
</CustomField>