unpackaged/main/default/objects/Car_Care_Visit__c/fields/Parts_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Parts_File_Name__c</fullName>
    <label>Parts File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>