unpackaged/main/default/objects/Car_Care_Visit__c/fields/Performed_Oil_Change__c.field-meta.xml
<CustomField>
    <fullName>Performed_Oil_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this repair order had a completed oil change (check = True)</description>
    <inlineHelpText>Designates if this repair order had a completed oil change (check = True)</inlineHelpText>
    <label>Performed Oil Change</label>
    <type>Checkbox</type>
</CustomField>