unpackaged/main/default/objects/Car_Care_Visit__c/fields/Performed_State_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Performed_State_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this repair order had a state inspection performed (check = True)</description>
    <inlineHelpText>Designates if this repair order had a state inspection performed (check = True)</inlineHelpText>
    <label>Performed State Inspection</label>
    <type>Checkbox</type>
</CustomField>