unpackaged/main/default/objects/Car_Care_Visit__c/fields/RO_Date__c.field-meta.xml
<CustomField>
    <fullName>RO_Date__c</fullName>
    <label>RO Date</label>
    <type>Date</type>
</CustomField>