unpackaged/main/default/objects/Car_Care_Visit__c/fields/RO_Number__c.field-meta.xml
<CustomField>
    <fullName>RO_Number__c</fullName>
    <formula>SUBSTITUTE(IntegrationId__c, LEFT(IntegrationId__c, FIND(&quot;_&quot;, IntegrationId__c)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RO Number</label>
    <type>Text</type>
</CustomField>