unpackaged/main/default/objects/Car_Care_Visit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Parts Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>