unpackaged/main/default/objects/Car_Care_Visit__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store #</label>
    <length>5</length>
    <type>Text</type>
</CustomField>