unpackaged/main/default/objects/Car_Care_Visit__c/fields/Supplies__c.field-meta.xml
<CustomField>
    <fullName>Supplies__c</fullName>
    <label>Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>