unpackaged/main/default/objects/Car_Care_Visit__c/fields/Survey_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Send_Date__c</fullName>
    <description>Date and Time that Salesforce survey was sent.</description>
    <inlineHelpText>Date and Time that Salesforce survey was sent.</inlineHelpText>
    <label>Survey Send Date</label>
    <type>DateTime</type>
</CustomField>