unpackaged/main/default/objects/Car_Care_Visit__c/fields/T_Cost__c.field-meta.xml
<CustomField>
    <fullName>T_Cost__c</fullName>
    <label>T Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>