unpackaged/main/default/objects/Car_Care_Visit__c/fields/Total_Car_Care_Visit__c.field-meta.xml
<CustomField>
    <fullName>Total_Car_Care_Visit__c</fullName>
    <label>Total Car Care Visit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>