unpackaged/main/default/objects/Car_Care_Visit__c/fields/Total_Labor__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor__c</fullName>
    <label>Total Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>