unpackaged/main/default/objects/Car_Care_Visit__c/fields/Total_Parts__c.field-meta.xml
<CustomField>
    <fullName>Total_Parts__c</fullName>
    <label>Total Parts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>