unpackaged/main/default/objects/Car_Care_Visit__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>