unpackaged/main/default/objects/Car_Care_Visit__c/fields/Writer__c.field-meta.xml
<CustomField>
    <fullName>Writer__c</fullName>
    <label>Writer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>